<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="6"
    android:id="@id/calculator_number_pad"
    android:layout_gravity="center">

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_ce"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_others_grey_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="0"
        android:layout_row="0"
        android:id="@id/numpad_ce"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_del"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_others_grey_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="1"
        android:layout_row="0"
        android:id="@id/numpad_del"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="Other"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="#666666"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="2"
        android:layout_row="0"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_percent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_others_grey_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_column="3"
        android:layout_row="0"
        android:id="@id/numpad_percent"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_divide"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_others_grey_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="3"
        android:layout_row="1"
        android:id="@id/numpad_divide"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_multiply"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_others_grey_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="3"
        android:layout_row="2"
        android:id="@id/numpad_multiply"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_minus"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_others_grey_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="3"
        android:layout_row="3"
        android:id="@id/numpad_minus"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_plus"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_others_grey_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="3"
        android:layout_row="4"
        android:id="@id/numpad_plus"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_equals"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_special_red_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_column="2"
        android:layout_row="4"
        android:id="@id/numpad_equals"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_decimal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_others_grey_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="0"
        android:layout_row="4"
        android:id="@id/numpad_decimal"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_nine"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_numbers_blue_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="2"
        android:layout_row="1"
        android:id="@id/numpad_nine"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_eight"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_numbers_blue_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="1"
        android:layout_row="1"
        android:id="@id/numpad_eight"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_seven"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_numbers_blue_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="0"
        android:layout_row="1"
        android:id="@id/numpad_seven"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_six"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_numbers_blue_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="2"
        android:layout_row="2"
        android:id="@id/numpad_six"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_five"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_numbers_blue_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="1"
        android:layout_row="2"
        android:id="@id/numpad_five"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_four"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_numbers_blue_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="0"
        android:layout_row="2"
        android:id="@id/numpad_four"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_three"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_numbers_blue_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="2"
        android:layout_row="3"
        android:id="@id/numpad_three"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_two"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_numbers_blue_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="1"
        android:layout_row="3"
        android:id="@id/numpad_two"/>

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_one"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_numbers_blue_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_gravity="center"
        android:layout_column="0"
        android:layout_row="3"
        android:id="@id/numpad_one" />

    <Button
        android:layout_width="@dimen/calc_single_width_dp"
        android:layout_height="@dimen/calc_single_height_dp"
        android:text="@string/numpad_zero"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:background="@drawable/numpad_calc_numbers_blue_background"
        android:textSize="@dimen/calc_text_size"
        android:layout_column="1"
        android:layout_row="4"
        android:id="@+id/numpad_zero" />

</GridLayout>